# cnft-fractionalization

./: Anchor.toml  Cargo.toml
programs/cnft-fractionalization/: Cargo.toml
programs/cnft-fractionalization/src/: constants.rs  error.rs  lib.rs  mod.rs  types.rs  utils.rs
programs/cnft-fractionalization/src/instructions/: initialize_fractionalization.rs  mod.rs  reclaim.rs
programs/cnft-fractionalization/src/state/: escrow_account.rs
tests/: cnft-fractionalization.ts
